<resources>
    <string name="app_name">Temi Tour</string>

    <!-- Button names -->
    <string name="culture_walk">Culture Walk</string>
    <string name="locate_office">Locate Office</string>
    <string name="courses">Africana Courses</string>
    <string name="events">Africana Events</string>
    <string name="leave_message">Leave Message</string>

    <string name="survey">Survey</string>
    <string name="presented_by">Presented by the Center for Digital Humanities</string>
    <string name="cancel">Cancel</string>
    <string name="begin">Begin</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="artist">Artist:</string>
    <string name="year">Year:</string>
    <string name="medium">Medium:</string>
    <string name="measurements">Measurements:</string>
    <string name="description">Description:</string>
    <string name="scan_qr">Scan for interactive AR experience</string>
    <string name="rate_experience">Rate your experience</string>
    <string name="rate_experience_message">"Help us improve your experience by taking a short survey"</string>
    <string name="continue_tour">Continue</string>
    <string name="select_painting">Select</string>
    <string name="finish_tour">Finish</string>
    <string name="tour_title">Culture Walk</string>
    <string name="survey_title">"Tour Survey"</string>
    <string name="events_title">Africana Studies Events</string>
    <string name="courses_title">Africana Studies Courses</string>
    <string name="survey_submitted">Survey response submitted</string>
    <string name="tour_info">This tour will walk you through the various paintings in this hall.</string>
    <string name="event_load_fail">Failed to load events.</string>
    <string name="alumni">Alumni</string>
    <string name="professors">Professors</string>
    <string name="news">News</string>
    <string name="info">Info</string>
    <string name="feedback">Feedback</string>
</resources>