<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TourSurveyActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survey"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/survey_fragment_container"
        android:name="com.example.temitour.SurveyFragment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/survey_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.39" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/survey_toolbar"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <Button
                android:id="@+id/survey_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="120dp"
                android:text="@string/back"
                android:textAllCaps="true" />

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/survey_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:progressDrawable="@drawable/survey_progress_bg"
                    android:scaleY=".8" />

                <TextView
                    android:id="@+id/survey_progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="0 / 10"
                    android:textAllCaps="false"
                    android:textColor="@color/survey_progress_text"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/survey_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="120dp"
                android:text="@string/next" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>